Fixed first row of table in dark mode

--- a/styles/manager.scss
+++ b/styles/manager.scss
@@ -98,6 +98,6 @@ form {
   right: 10px;
 }
 
-
-
-// Adding code to push to master
+.first-row {
+  color: black;
+}
